Craigslist nav bars added but non-functional

--- a/Craigslist_Redesign/index.html
+++ b/Craigslist_Redesign/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Shapes Assignment</title>
+    <title>Craigslist Redesign</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i|Vidaloka" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,4 +20,60 @@
         <div><image class="calendar" src="icons/calendar.png"></image></div>
         <div><image class="profile" src="icons/profile.png"></image></div>
     </header>
+    <nav class="lvl1-nav">
+        <ul>
+            <li>Community</li>
+            <li>Personals</li>
+            <li>Serices</li>
+            <li>Discussion Forums</li>
+            <li>Housing</li>
+            <li>For Sale</li>
+            <li>Resumes</li>
+            <li>Jobs</li>
+            <li>Gigs</li>
+        </ul>
+    </nav>
+    <nav class="lvl2-nav">
+        <ul>
+            <li>antiques</li>
+            <li>appliances</li>
+            <li>arts+crafts</li>
+            <li>atv/utv/sno</li>
+            <li>auto parts</li>
+            <li>baby+kid</li>
+            <li>barter</li>
+            <li>beauty+health</li>
+            <li>bikes</li>
+            <li>boats</li>
+            <li>books</li>
+            <li>business</li>
+            <li>cars+trucks</li>
+            <li>cds/dvd/vhs</li>
+            <li>cell phones</li>
+            <li>clothes+acc</li>
+            <li>collectibles</li>
+            <li>computers</li>
+            <li>electronics</li>
+            <li>farm+garden</li>
+            <li>free</li>
+            <li>furniture</li>
+            <li>garage sale</li>
+            <li>general</li>
+            <li>heavy equip</li>
+            <li>household</li>
+            <li>jewelry</li>
+            <li>materials</li>
+            <li>motorcycles</li>
+            <li>music instr</li>
+            <li>photo+video</li>
+            <li>rvs+camp</li>
+            <li>sporting</li>
+            <li>tickets</li>
+            <li>tools</li>
+            <li>toys+games</li>
+            <li>trailers</li>
+            <li>video gaming</li>
+            <li>wanted</li>
+        </ul>
+    </nav>
 </body>
